--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
         </p>
       </div>
       <div class="buttons">
-        <button id="sub">
+        <div id="sub">
           <img id="icon" src="images/icon-music.svg" alt="Icon Music">
-          <h2>Annual Plan</h2>
-          <p id="amount">$59.99/year</p>
-          <a id="change" href="#">Change</a>
-        </button>
+          <div class="sub-info">
+            <h2>Annual Plan</h2>
+            <div id="amount">$59.99/year</div>
+          </div>
+            <a id="change" href="#">Change</a> 
+        </div>
         <button id="payment">Proceed to Payment</button>
         <button id="cancel"href="#">Cancel Order</button>
       </main>
