--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="wrapper">
-    <img src="images/illustration-hero.svg" alt="">
+    <img class="main-img" src="images/illustration-hero.svg" alt="">
     <main>
       <h1>Order Summary</h1>
       <div>
