--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 </body>  
 <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Evie Dickman</a>.
+    Coded by <a href="https://github.com/General-Evie" target="_blank">Evie Dickman</a>.
 </footer>
 </html>
